stylesheets/layout.css
* {
    box-sizing: border-box;
}

body {
    width: 100%;
    height: 342vw;
    margin: 0 auto;
    background-position: top;
    background-color: black;
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
    overflow-x: hidden;
    background-image: url("../images/layout.png");
     background-repeat: no-repeat;
    background-size: 100% auto;
    z-index: -2;
}

/* body::after {
    content: '';
    background-repeat: no-repeat;
    background-size: 100% auto;
    background-position: top;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-image: url("../images/layout.png");
    opacity: 0.2;
    z-index: -2;
} */

.tiny5-regular {
    font-family: "Tiny5", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.section1 {
    margin: 0 auto;
    width: 100%;
    height: 18vw;
    position: relative;
}

.title {
    margin: 0;
    color: white;
    font-size: 14vw;
    text-align: center;
    padding-top: 0.6vw;
}

.title-small {
    color: white;
    font-size: 2.7vw;
    text-align: center;
    margin-top: -2.5vw;
}

.section2 {
    margin: 0 auto;
    position: relative;
    width: 100%;
    height: 46vw;
    display: flex;
    justify-content: center;
}

.line-1 {
    width: 100%;
    height: 1vw;
    background: #8E8F7B;
    margin-top: 3vw;
}

.line-2 {
    width: 100%;
    height: 1vw;
    background: #2D2F19;
}

.background-sec-2 {
    position: absolute;
    margin: 0 auto;
    height: 46vw;
}
.background-image-sec-2 {
    height: 47vw;
    width: 100%;
    padding-left: 3vw;
    padding-bottom: 1.5vw;}
.screen {
    display: flex;
    width: 62vw;
    height: 39vw;
    background-image: url(/images/screenbg.png);
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    justify-content: center;
}
.frame {
    width: 51vw;
    height: 29vw;
    background-image: url(/images/camera1.png);
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
}
.buttons {
    display: flex;
    flex-direction: column;
    position: absolute;
    gap: 13.5vw;
}
.buttons button {
    background-color: transparent;
    border: none;
    outline: none;
    padding: 0;
    cursor: pointer;
}

.lamp-icons {
    display: flex;
    gap: 6vw;
}

.group-buttons-sec2 {
    position: relative;
     display: flex;
     gap: 3vw;
     justify-content: space-between;

}

.camera-view {
    justify-content: center;
    width: 51vw;
    height: 29vw;
}

/* .background-sec-3 {
    margin: 0 auto;
    height: 51vw;
    background-image: url("./../images/backgroundsec3.png");
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    padding: 6vw 4vw;
    padding-left: 2vw;
}

.player {
    width: 85vw;
    height: 41vw;
    background-color: #8E8F7B;
    border: 0.2vw solid black;
}

.background-sec-4 {
    width: 100%;
    height: 14vw;
    background-image: url("./../images/wavebackground.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.disk-block {
    width: 39vw;
    height: 39vw;
    background-color: #61624F;
    border: 0.1vw solid black;
    position: relative;
}

.disk-block::after {
    content: "";
    position: absolute;
    width: 39vw;
    height: 39vw;
    border: 0.1vw solid white;
}

.background-sec-5 {
    width: 94vw;
    height: 65vw;
    background-image: url("./../images/backgroundsec5.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.id-image {
    width: 36vw;
    height: 52vw;
    background-color: #2D2F19;
    border: 6px solid #8E8F7B;
}

.screen-2 {
    width: 30vw;
    height: 45vw;
    background-color: #2D2F19;
    border: 0.4vw solid #8E8F7B;
}

.progress-bar {
    width: 7vw;
    height: 62vw;
    background-color: #000;
}

.puzzle {
    width: 100%;
    height: auto;
    background-image: url("../images/puzzleFrame.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.yellow-tape {
    width: 100%;
    height: 4vw;
    background-image: url("../images/yellowtape.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.grid {
    width: 100%;
    height: 44vw;
    background-image: url("../images/grid.png");
    background-repeat: no-repeat;
    background-size: cover;
} */

